--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset = "utf-8">
+		<title>Sam Shih</title>
+
+		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/normalize.css">
+
+		<script src="js/wow.min.js"></script>
+		<script>
+		 new WOW().init();
+		</script>
+	</head>
+	<body>
+		<header>
+			<div>
+				<h1 class="wow fadeInUp">Samuel Shih</h1>
+			</div>
+		</header>
+	</body>
+</html>
