--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 		</script>
 	</head>
 	<body>
-		<header>
+		<header id="intro">
 			<div>
 				<h1 class="wow fadeInUp">Samuel Shih</h1>
+
 			</div>
 		</header>
+
+		<section id="about">
+			<h1 class="wow fadeIn">About me</h1>
+		</section>
+		<section id="education">
+		</section>
+		<section id="work">
+		</section>
 	</body>
 </html>
