--- a/index.html
+++ b/index.html
@@ -3,30 +3,35 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>Sam Shih</title>
-
-		<link rel="stylesheet" href="css/animate.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/normalize.css">
-
-		<script src="js/wow.min.js"></script>
-		<script>
-		 new WOW().init();
-		</script>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<header id="intro">
+		<header class="intro">
 			<div>
-				<h1 class="wow fadeInUp">Samuel Shih</h1>
-
-			</div>
+				<h1 id="name-intro">Hello, I'm SAM</h1>
+				<h3><em>Enginerd, Musician, Creator</em></h3>
+			
+				<ul class="social-icons">
+					<li>
+						<a href="https://www.facebook.com/thesamshih" target="_blank"><i class="fa fa-facebook"></i></a>
+					</li>
+					<li>
+						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i>
+					</li>
+					<li>
+						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
+					</li>
+				</ul>
+				</a>
 		</header>
-
-		<section id="about">
-			<h1 class="wow fadeIn">About me</h1>
-		</section>
-		<section id="education">
-		</section>
-		<section id="work">
-		</section>
 	</body>
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/wow.min.js"></script>
 </html>
