--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<title>Sam Shih</title>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text'css" href="css/superslides.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<header class="intro">
-			<div>
-				<h1 id="name-intro">Hello, I'm SAM</h1>
+		<header class="slides home">
+			<div class="slides-container">
+				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
 				<h3><em>Enginerd, Musician, Creator</em></h3>
 			
 				<ul class="social-icons">
@@ -28,10 +29,11 @@
 						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
 					</li>
 				</ul>
-				</a>
 		</header>
 	</body>
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/wow.min.js"></script>
+	<script src="js/jquery.superslides.min.js"></script>
+	<script src="js/main.js"></script>
 </html>
