--- a/index.html
+++ b/index.html
@@ -6,29 +6,44 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text'css" href="css/superslides.css">
-		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<header class="slides home">
+		<div id="slides">
 			<div class="slides-container">
-				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-				<h3><em>Enginerd, Musician, Creator</em></h3>
-			
-				<ul class="social-icons">
-					<li>
-						<a href="https://www.facebook.com/thesamshih" target="_blank"><i class="fa fa-facebook"></i></a>
-					</li>
-					<li>
-						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i>
-					</li>
-					<li>
-						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
-					</li>
-					<li>
-						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
-					</li>
-				</ul>
+				<header class="home">
+					<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
+					<h3><em>Enginerd, Musician, Creator</em></h3>
+				
+					<ul class="social-icons">
+						<li>
+							<a href="https://www.facebook.com/thesamshih" target="_blank"><i class="fa fa-facebook"></i></a>
+						</li>
+						<li>
+							<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i>
+						</li>
+						<li>
+							<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/user/iamawesam/videos" target="_blank"><i class="fa fa-youtube"></i></a>
+						</li>
+					</ul>
+				</header>
+				
+				<div class="about-me">
+					<img src="images/profile_pic.jpg">
+					<h1>Sam Shih</h1>
+					<h2>About Me</h2>
+					<p> info info info </p>
+
+				</div>
+			</div> <!-- End Slides Container -->
+		</div>
 		</header>
 	</body>
 	<script src="js/jquery-2.1.3.min.js"></script>
