pretty stuff up

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<div>
 			<!-- Home -->
 			<div class="home-container">
-			  <div id="home-content">
+			  <div class="home-content">
   				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-  				<h3 class="animated fadeIn"><em>Enginerd, Musician, Writer</em></h3>
+  				<h3 class="animated fadeIn"><em>Enginerd, Masseuse, Writer</em></h3>
 
   				<ul class="social-icons">
   					<li>
@@ -35,30 +35,71 @@
 
 			<!-- About Me -->
 			<div class="about-container" id="about">
-			<h1><b>About Me</b></h1>
-			<br><br>
-				<div class="container">
-					<div class="row col-md-6">
-						<img id="profile-pic" src="images/profile_pic.jpg"></img>
+				<h1><b>About Me</b></h1>
+				<br><br>
+					<div class="container">
+						<div class="row col-md-6">
+							<img id="profile-pic" src="images/profile_pic.jpg"></img>
+						</div>
+						<div class="row col-md-6">
+							<p id="about-info">
+								Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
+								Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
+								Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
+								engineers then continued buildling Caviar after it's
+								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
+								On campus I sing in the choir, give massages to stressed students, and powerlift.
+								You can catch me writing about positive psychology,
+								self improvement, and my college experience on my blog.
+							</p>
+						</div>
 					</div>
-					<div class="row col-md-6">
-						<p id="about-info">
-							Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
-							Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
-							Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
-							engineers then continued to work on Caviar after it's
-							<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
-							On campus I sing in the choir, give massages to stressed students, and powerlift.
-							You can catch me crawling the interwebs or writing about positive psychology,
-							self improvement, and my college experience on my blog.
-						</p>
-					</div>
-				</div>
 			</div>
 
 			<!-- Experience -->
-			<div class="experience" id="experience">
+			<div class="experience-container" id="experience">
+				<h1 id="experience-header"><b>Experience</b></h1>
 
+				<div class="container">
+					<div class="row col-md-6">
+						<img id="company-logo" src="images/caviar.jpg"></img>
+
+					<!-- Caviar -->
+					</div>
+					<div class="row col-md-6">
+						<h2 id="company-name">Caviar</h2>
+					</div>
+					<div class="row col-md-6">
+						<ul>
+							<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
+							<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
+							<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
+						</ul>
+					</div>
+
+				</div>
+				<br><br>
+				<!-- Square -->
+				<div class="container">
+					<div class="row col-md-6">
+						<img id="company-logo" src="images/square.png"></img>
+					</div>
+					<div class="row col-md-6">
+						<h2 id="company-name">Square</h2>
+					</div>
+					<div class="row col-md-6">
+						<ul>
+							<li>Built an internal marketing bot that helps General Mangers in
+								 16+ cities manage courier job listings, ensuring we always had
+								 couriers to decrease the time it takes to launch markets in new regions</li>
+							<li>Created the backend for disabling merchants. This allows relevant teams to
+								always be notified whenever restaurants run out of ingredients, experience app
+								issues, or reach their maximum order volume</li>
+							<li>Built many feature requests in the admin codebase</li>
+					</ul>
+					</div>
+					<br>
+				</div>
 			</div>
 
 			<!-- Contact -->
