--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<body>
 		<div>
 			<!-- Home -->
-			<div class="home-container">
+			<div class="home-container parallax-window" id="slide_background" data-parallax="scroll" data-image-src="images/slide_background.jpg">
 			  <div class="home-content">
-  				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-  				<h3 class="animated fadeIn"><em>Enginerd, Masseuse, Writer</em></h3>
 
+  				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
+  				<h3 class="animated fadeIn"><em>Enginerd, Masseur, Writer</em></h3>
   				<ul class="social-icons">
   					<li>
   						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
@@ -30,6 +30,7 @@
   						<a href="http://samshih.me" target="_blank"><i class="fa fa-wordpress"></i></a>
   					</li>
   				</ul>
+
 				</div>
 			</div>
 
@@ -114,6 +115,7 @@
 		</div>
 	</body>
 	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/parallax.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<!-- <script src="js/wow.min.js"></script> -->
 	<script src="js/jquery.nicescroll.min.js"></script>
