--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
 								On campus I sing in the choir, give massages to stressed students, and powerlift.
 								You can catch me writing about positive psychology,
-								self improvement, and my college experience on my blog.
+								self improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
 						</div>
 					</div>
@@ -67,8 +67,9 @@
 
 					<!-- Caviar -->
 					</div>
-					<div class="row col-md-6">
-						<h2 id="company-name">Caviar</h2>
+					<div class="row col-md-6" id="company-info">
+						<h2><a href="https://trycaviar.com" target="_blank">Caviar</a></h2>
+						<h4>Engineering Intern</h4>
 					</div>
 					<div class="row col-md-6">
 						<ul>
@@ -85,8 +86,9 @@
 					<div class="row col-md-6">
 						<img id="company-logo" src="images/square.png"></img>
 					</div>
-					<div class="row col-md-6">
-						<h2 id="company-name">Square</h2>
+					<div class="row col-md-6" id="company-info">
+						<h2><a href="https://squareup.com" target="_blank">Square</a></h2>
+						<h4>Engineering Intern</h4>
 					</div>
 					<div class="row col-md-6">
 						<ul>
