--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
   					<li>
   						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
   					</li>
-						<li>
-  						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i>
-  					</li>
-  					<li>
+	  					<li>
   						<a href="http://samshih.me" target="_blank"><i class="fa fa-wordpress"></i></a>
   					</li>
+						<li>
+							<a href="https://www.instagram.com/samyoshih/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</li>
+						<!-- <li>
+  						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i></a>
+  					</li> -->
   				</ul>
 
 				</div>
@@ -64,9 +67,9 @@
 				<div class="container">
 					<div class="row col-md-6">
 						<img id="company-logo" src="images/caviar.jpg"></img>
+					</div>
 
 					<!-- Caviar -->
-					</div>
 					<div class="row col-md-6" id="company-info">
 						<h2><a href="https://trycaviar.com" target="_blank">Caviar</a></h2>
 						<h4>Engineering Intern</h4>
@@ -78,14 +81,16 @@
 							<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
 						</ul>
 					</div>
-
 				</div>
+
 				<br><br>
-				<!-- Square -->
+
 				<div class="container">
 					<div class="row col-md-6">
 						<img id="company-logo" src="images/square.png"></img>
 					</div>
+
+					<!-- Square -->
 					<div class="row col-md-6" id="company-info">
 						<h2><a href="https://squareup.com" target="_blank">Square</a></h2>
 						<h4>Engineering Intern</h4>
@@ -102,6 +107,17 @@
 					</ul>
 					</div>
 					<br>
+				</div>
+
+				<br><br>
+
+				<div class="container">
+					<div class="row col-md-5"></div>
+					<div class="row col-md-2">
+						<a id="resume" href="https://www.dropbox.com/s/yyp7eisd1x4dy1f/SAM_SHIH_RESUME.pdf?dl=0"
+						 target="_blank"><i class="fa fa-dropbox"></i> Resume</a>
+					</div>
+					<div class="row col-md-5"></div>
 				</div>
 			</div>
 
