--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 				<br><br>
 					<div class="container">
 						<div class="row col-md-6">
-							<img id="profile-pic" src="images/profile_pic.jpg"></img>
+							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
 						</div>
 						<div class="row col-md-6">
 							<p id="about-info">
 								Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
 								Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
 								Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
-								engineers then continued buildling Caviar after it's
+								engineers then continued building Caviar after its
 								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
 								On campus I sing in the choir, give massages to stressed students, and powerlift.
 								You can catch me writing about positive psychology,
-								self improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
+								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
 						</div>
 					</div>
@@ -97,7 +97,7 @@
 					</div>
 					<div class="row col-md-6">
 						<ul>
-							<li>Built an internal marketing bot that helps General Mangers in
+							<li>Built an internal marketing bot that helps General Managers in
 								 16+ cities manage courier job listings, ensuring we always had
 								 couriers to decrease the time it takes to launch markets in new regions</li>
 							<li>Created the backend for disabling merchants. This allows relevant teams to
@@ -114,12 +114,15 @@
 				<div class="container">
 					<div class="row col-md-5"></div>
 					<div class="row col-md-2">
-						<a id="resume" href="https://www.dropbox.com/s/yyp7eisd1x4dy1f/SAM_SHIH_RESUME.pdf?dl=0"
-						 target="_blank"><i class="fa fa-dropbox"></i> Resume</a>
+						 <a id="resume" href="SAM_SHIH_RESUME.pdf"
+ 						 target="_blank"><i class="fa fa-file-pdf-o"></i> Resume</a>
+
 					</div>
 					<div class="row col-md-5"></div>
 				</div>
+				<br><br>
 			</div>
+
 
 			<!-- Contact -->
 			<!-- <div class="contact" id="contact">
@@ -135,7 +138,7 @@
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<!-- <script src="js/wow.min.js"></script> -->
+	<script src="js/wow.min.js"></script>
 	<script src="js/jquery.nicescroll.min.js"></script>
 	<script src="js/main.js"></script>
 </html>
