--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 					<div class="container">
 						<div class="row col-md-6">
 							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
+							<h2>Sam Shih</h2>
+							<a id="email" href="mailto:sam00429@gmail.com">sam00429@gmail.com</a>
 						</div>
 						<div class="row col-md-6">
 							<p id="about-info">
@@ -56,6 +58,7 @@
 								You can catch me writing about positive psychology,
 								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
+							<p>Interests: artificial intelligence, web development, programming languages</p>
 						</div>
 					</div>
 			</div>
@@ -73,6 +76,7 @@
 					<div class="row col-md-6" id="company-info">
 						<h2><a href="https://trycaviar.com" target="_blank">Caviar</a></h2>
 						<h4>Engineering Intern</h4>
+						<h5>Mentored by two technical founders, worked with the full Rails stack to build the startup in rapid iterations</h5>
 					</div>
 					<div class="row col-md-6">
 						<ul>
@@ -94,13 +98,16 @@
 					<div class="row col-md-6" id="company-info">
 						<h2><a href="https://squareup.com" target="_blank">Square</a></h2>
 						<h4>Engineering Intern</h4>
+						<h5>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive
+							tests for all features. Part of a 25-person engineering team, using Ruby on Rails and surrounding
+							technologies.</h5>
 					</div>
 					<div class="row col-md-6">
 						<ul>
 							<li>Built an internal marketing bot that helps General Managers in
 								 16+ cities manage courier job listings, ensuring we always had
 								 couriers to decrease the time it takes to launch markets in new regions</li>
-							<li>Created the backend for disabling merchants. This allows relevant teams to
+							<li>Created the backend for disabling merchants allowing relevant teams to
 								always be notified whenever restaurants run out of ingredients, experience app
 								issues, or reach their maximum order volume</li>
 							<li>Built many feature requests in the admin codebase</li>
