animated header bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div>
 			<!-- Home -->
 			<div class="home-container parallax-window" id="slide_background" data-parallax="scroll" data-image-src="images/slide_background.jpg">
-			  <div class="home-content">
+			  <div class="wow home-content animated fadeIn" data-wow-delay="0.1s">
 
   				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
   				<h3 class="animated fadeIn"><em>Enginerd, Masseur, Writer</em></h3>
