move from samuelshih.github.io

--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
-sam shih
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset = "utf-8">
+		<title>Sam Shih</title>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+	<body>
+		<div>
+			<!-- Home -->
+			<div class="home-container parallax-window" id="slide_background" data-parallax="scroll" data-image-src="images/slide_background.jpg">
+			  <div class="wow home-content animated fadeIn" data-wow-delay="0.1s">
+
+  				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
+  				<h3 class="animated fadeIn"><em>Enginerd, Masseur, Writer</em></h3>
+  				<ul class="social-icons">
+  					<li>
+  						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
+  					</li>
+  					<li>
+  						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
+  					</li>
+	  					<li>
+  						<a href="http://samshih.me" target="_blank"><i class="fa fa-wordpress"></i></a>
+  					</li>
+						<li>
+							<a href="https://www.instagram.com/samyoshih/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</li>
+						<!-- <li>
+  						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i></a>
+  					</li> -->
+  				</ul>
+
+				</div>
+			</div>
+
+			<!-- About Me -->
+			<div class="about-container" id="about">
+				<h1><b>About Me</b></h1>
+				<br><br>
+					<div class="container">
+						<div class="row col-md-6">
+							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
+							<h2>Sam Shih</h2>
+							<a id="email" href="mailto:sam00429@gmail.com">sam00429@gmail.com</a>
+						</div>
+						<div class="row col-md-6">
+							<p id="about-info">
+								Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
+								Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
+								Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
+								engineers then continued building Caviar after its
+								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
+								On campus I sing in the choir, give massages to stressed students, and powerlift.
+								You can catch me writing about positive psychology,
+								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
+							</p>
+							<p>Interests: artificial intelligence, web development, programming languages</p>
+						</div>
+					</div>
+			</div>
+
+			<!-- Experience -->
+			<div class="experience-container" id="experience">
+				<h1 id="experience-header"><b>Experience</b></h1>
+
+				<div class="container">
+					<div class="row col-md-6">
+						<img id="company-logo" src="images/caviar.jpg"></img>
+					</div>
+
+					<!-- Caviar -->
+					<div class="row col-md-6" id="company-info">
+						<h2><a href="https://trycaviar.com" target="_blank">Caviar</a></h2>
+						<h4>Engineering Intern</h4>
+						<h5>Mentored by two technical founders, worked with the full Rails stack to build the startup in rapid iterations</h5>
+					</div>
+					<div class="row col-md-6">
+						<ul>
+							<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
+							<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
+							<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
+						</ul>
+					</div>
+				</div>
+
+				<br><br>
+
+				<div class="container">
+					<div class="row col-md-6">
+						<img id="company-logo" src="images/square.png"></img>
+					</div>
+
+					<!-- Square -->
+					<div class="row col-md-6" id="company-info">
+						<h2><a href="https://squareup.com" target="_blank">Square</a></h2>
+						<h4>Engineering Intern</h4>
+						<h5>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive
+							tests for all features. Part of a 25-person engineering team, using Ruby on Rails and surrounding
+							technologies.</h5>
+					</div>
+					<div class="row col-md-6">
+						<ul>
+							<li>Built an internal marketing bot that helps General Managers in
+								 16+ cities manage courier job listings, ensuring we always had
+								 couriers to decrease the time it takes to launch markets in new regions</li>
+							<li>Created the backend for disabling merchants allowing relevant teams to
+								always be notified whenever restaurants run out of ingredients, experience app
+								issues, or reach their maximum order volume</li>
+							<li>Built many feature requests in the admin codebase</li>
+					</ul>
+					</div>
+					<br>
+				</div>
+
+				<br><br>
+
+				<div class="container">
+					<div class="row col-md-5"></div>
+					<div class="row col-md-2">
+						 <a id="resume" href="SAM_SHIH_RESUME.pdf"
+ 						 target="_blank"><i class="fa fa-file-pdf-o"></i> Resume</a>
+
+					</div>
+					<div class="row col-md-5"></div>
+				</div>
+				<br><br>
+			</div>
+
+
+			<!-- Contact -->
+			<!-- <div class="contact" id="contact">
+				<form id="contactForm" name="contactForm">
+					<input type="text" placeholder="Name" value="" size="35" id="contactName" name="contactName">
+					<input type="text" placeholder="Email" value="" size="35" id="contactEmail" name="contactEmail">
+					<textarea col="5" rows="5" placeholder="Message" id="contactMessage" name="contactMessage"></textarea>
+				</form>
+			</div> -->
+
+		</div>
+	</body>
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/parallax.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/jquery.nicescroll.min.js"></script>
+	<script src="js/main.js"></script>
+</html>
