--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			  <div class="wow home-content animated fadeIn" data-wow-delay="0.1s">
 
   				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-  				<h3 class="animated fadeIn"><em>Enginerd, Masseur, Writer</em></h3>
+  				<h3 class="animated fadeIn"><em>Engineer, Student, Writer</em></h3>
   				<ul class="social-icons">
   					<li>
   						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
