--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			  <div class="wow home-content animated fadeIn" data-wow-delay="0.1s">
 
   				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-  				<h3 class="animated fadeIn"><em>Enginerd, Masseur, Writer</em></h3>
+  				<h3 class="animated fadeIn"><em>Engineer, Student, Writer</em></h3>
   				<ul class="social-icons">
   					<li>
   						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
@@ -45,7 +45,6 @@
 						<div class="row col-md-6">
 							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
 							<h2>Sam Shih</h2>
-							<a id="email" href="mailto:sam00429@gmail.com">sam00429@gmail.com</a>
 						</div>
 						<div class="row col-md-6">
 							<p id="about-info">
@@ -59,6 +58,7 @@
 								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
 							<p>Interests: artificial intelligence, web development, programming languages</p>
+							Contact me: <a id="email" href="mailto:sam_shih@icloud.com">sam_shih@icloud.com</a>
 						</div>
 					</div>
 			</div>
