--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>Sam Shih</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -45,7 +45,6 @@
 						<div class="row col-md-6">
 							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
 							<h2>Sam Shih</h2>
-							<a id="email" href="mailto:sam00429@gmail.com">sam00429@gmail.com</a>
 						</div>
 						<div class="row col-md-6">
 							<p id="about-info">
@@ -59,6 +58,7 @@
 								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
 							<p>Interests: artificial intelligence, web development, programming languages</p>
+							Contact me: <a id="email" href="mailto:sam_shih@icloud.com">sam_shih@icloud.com</a>
 						</div>
 					</div>
 			</div>
