update about me

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 						</div>
 						<div class="row col-md-6">
 							<p id="about-info">
-								Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
-								Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
+								Hi I'm Sam! I'm from San Francisco, California and am currently a sophomore at
+								Swarthmore College. I'm interested in Computer Science and Philosophy.
 								Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
 								engineers then continued building Caviar after its
 								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
-								On campus I sing in the choir, give massages to stressed students, and powerlift.
+								On campus I sing in the choir, dance ballet, and powerlift.
 								You can catch me writing about positive psychology,
 								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
 							</p>
