--- a/index.html
+++ b/index.html
@@ -1,151 +1,264 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <html>
 	<head>
-		<meta charset = "utf-8">
 		<title>Sam Shih</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="css/animate.css">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
-		<div>
-			<!-- Home -->
-			<div class="home-container parallax-window" id="slide_background" data-parallax="scroll" data-image-src="images/slide_background.jpg">
-			  <div class="wow home-content animated fadeIn" data-wow-delay="0.1s">
 
-  				<h1 id="name-home">Hello, I'm <span id="name">SAM</span></h1>
-  				<h3 class="animated fadeIn"><em>Engineer, Student, Writer</em></h3>
-  				<ul class="social-icons">
-  					<li>
-  						<a href="https://www.github.com/samuelshih" target="_blank"><i class="fa fa-github"></i></a>
-  					</li>
-  					<li>
-  						<a href="https://www.linkedin.com/in/shihsamuel" target="_blank"><i class="fa fa-linkedin"></i></a>
-  					</li>
-	  					<li>
-  						<a href="http://samshih.me" target="_blank"><i class="fa fa-wordpress"></i></a>
-  					</li>
-						<li>
-							<a href="https://www.instagram.com/samyoshih/" target="_blank"><i class="fa fa-instagram"></i></a>
-						</li>
-						<!-- <li>
-  						<a href="https://www.twitter.com/thesamshih" target="_blank"><i class="fa fa-twitter"></i></a>
-  					</li> -->
-  				</ul>
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
 
-				</div>
-			</div>
-
-			<!-- About Me -->
-			<div class="about-container" id="about">
-				<h1><b>About Me</b></h1>
-				<br><br>
-					<div class="container">
-						<div class="row col-md-6">
-							<img class="wow animated zoomIn" id="profile-pic" src="images/profile_pic.jpg"></img>
-							<h2>Sam Shih</h2>
+				<!-- One -->
+					<section class="banner style5 fullscreen content-align-left image-position-right fullscreen onload-image-fade-down onscroll-content-fade-left invert">
+						<div class="content">
+							<h1 class="major">Sam Shih</h1>
+							<p class="major">Hi I'm Sam! I'm from San Francisco, California and am currently a junior at
+							Swarthmore College. I'm majoring in Computer Science and Asian studies.
+							Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
+							engineers then continued building Caviar after its
+							<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
+							On campus I sing in the choir, draw <a href="#art" class="smooth-scroll-middle">art</a>, and powerlift.
+							You can catch me writing about positive psychology,
+							self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.<!--]--></p>
+							<ul class="actions vertical">
+								<li><a href="#experience" class="button big wide smooth-scroll-middle">About Me</a></li>
+							</ul>
 						</div>
-						<div class="row col-md-6">
-							<p id="about-info">
-								Hi I'm Sam! I'm from San Francisco, California and am currently a freshman at
-								Swarthmore College. I'm interested in Computer Science, Philosophy, and Religion.
-								Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
-								engineers then continued building Caviar after its
-								<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
-								On campus I sing in the choir, give massages to stressed students, and powerlift.
-								You can catch me writing about positive psychology,
-								self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.
-							</p>
-							<p>Interests: artificial intelligence, web development, programming languages</p>
-							Contact me: <a id="email" href="mailto:sam_shih@icloud.com">sam_shih@icloud.com</a>
+						<div class="image">
+							<img src="images/sam_shih_banner.jpg" alt="" />
 						</div>
-					</div>
-			</div>
+					</section>
 
-			<!-- Experience -->
-			<div class="experience-container" id="experience">
-				<h1 id="experience-header"><b>Experience</b></h1>
+				<!-- Experience -->
+				<section class="wrapper style1 align-center" id="experience">
+					<div class="inner">
+						<h2>Experience</h2>
+						<div class="index align-left">
 
-				<div class="container">
-					<div class="row col-md-6">
-						<img id="company-logo" src="images/caviar.jpg"></img>
-					</div>
+							<!-- Square -->
+								<section>
+									<header>
+										<h2>Square</h2>
+										<h4>Engineering Intern</h4>
+										<h5>August 2014 - August 2015</h5>
+										<img class="image logo" src="images/logos/square.png" alt="square" />
+									</header>
+									<div class="content">
+										<p>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive tests for all features. Part of a 25-person engineering team, using Ruby on Rails, Heroku, AWS, MySQL.</p>
+										<ul>
+											<li>Built an internal marketing bot that helps General Managers in
+												 16+ cities manage courier job listings, ensuring we always had
+												 couriers to decrease the time it takes to launch markets in new regions</li>
+											<li>Created the backend for disabling merchants allowing relevant teams to
+												always be notified whenever restaurants run out of ingredients, experience app
+												issues, or reach their maximum order volume</li>
+											<li>Built many feature requests in the admin codebase</li>
+									</ul>
 
-					<!-- Caviar -->
-					<div class="row col-md-6" id="company-info">
-						<h2><a href="https://trycaviar.com" target="_blank">Caviar</a></h2>
-						<h4>Engineering Intern</h4>
-						<h5>Mentored by two technical founders, worked with the full Rails stack to build the startup in rapid iterations</h5>
-					</div>
-					<div class="row col-md-6">
-						<ul>
-							<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
-							<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
-							<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
+									</div>
+								</section>
+
+								<!-- Caviar -->
+									<section>
+										<header>
+											<h2>Caviar</h2>
+											<h4>Engineering Intern</h4>
+											<h5>June 2014 - August 2014</h5>
+												<img class="image logo" src="images/logos/caviar.jpg" alt="caviar" />
+										</header>
+										<div class="content">
+											<p>Mentored by two technical founders, worked with the full Rails stack to build the startup in rapid iterations. One of the first 6 engineers, first intern.</p>
+											<ul>
+												<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
+												<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
+												<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
+											</ul>
+										</div>
+									</section>
+									<!-- <ul class="actions resume">
+										<li><a href="https://www.cs.swarthmore.edu/~sshih1/SAM_SHIH_RESUME.pdf" target="_blank" class="button icon fa-download">Resume</a></li>
+									</ul> -->
+				</section>
+
+				<!-- Art -->
+				<section class="wrapper style1 align-center" id="art">
+						<div class="inner">
+							<h2>Art</h2>
+							<p>Drawings from graphite, ink, charcoal</p>
+						</div>
+
+						<!-- Art Gallery -->
+							<div class="gallery style2 small lightbox onscroll-fade-in">
+								<article>
+									<a href="images/art/violin_white.jpg" class="image">
+										<img src="images/art/thumbs/violin_white_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Mixed Violin White</h3>
+										<p>Drawn with mixed materials. Top is graphite. Left is ink. Right is charcoal</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+
+								<article>
+									<a href="images/art/one_perspective_torii.jpg" class="image">
+										<img src="images/art/thumbs/one_perspective_torii_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Portals, Japan</h3>
+										<p>Drawn with a one point perspective system.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/art/naruto_tree.jpg" class="image">
+										<img src="images/art/thumbs/naruto_tree_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Sadness and Sorrow</h3>
+										<p>Denoument of Naruto. Graphite on Card.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/art/violin_black.jpg" class="image">
+										<img src="images/art/thumbs/violin_black_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Mixed Violin Black</h3>
+										<p>Drawn with mixed materials. Top is graphite. Left is ink. Right is charcoal.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/art/mixed_materials.jpg" class="image">
+										<img src="images/art/thumbs/mixed_materials_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Mixed Materials</h3>
+										<p>Charcoal. Still Life.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+					</section>
+
+				<!-- Projects -->
+				<section class="spotlight style3 iphone orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Mindful</h2>
+						<h3>Inspiration</h3>
+						<p>We believe that your behavior online, communication with friends, interactions with your smartphone all relate to how you're feeling throughout the day. We thought - wouldn't it be helpful to track your mental health and emotions as you use your phone?</p>
+						<h3>About</h3>
+						<p>Mindful is an iOS keyboard that helps you document your mental health passively. Just by using your iPhone, you'll get data recorded analyzing your emotions throughout the day. You can see this data represented with line and radar graphs on your personal dashboard.</p>
+						<ul class="actions vertical">
+							<li><a href="https://devpost.com/software/mindful-t7ovb5" target="_blank" class="button">Learn More</a></li>
 						</ul>
+						<!-- <a href="https://www.github.com/samuelshih/mindful" target="_blank" class="icon small fa-github"><span class="label">Github</span></a> -->
 					</div>
-				</div>
-
-				<br><br>
-
-				<div class="container">
-					<div class="row col-md-6">
-						<img id="company-logo" src="images/square.png"></img>
+					<div class="image">
+						<img id="mindful" src="images/mindful.png" alt="mindful" />
 					</div>
+				</section>
 
-					<!-- Square -->
-					<div class="row col-md-6" id="company-info">
-						<h2><a href="https://squareup.com" target="_blank">Square</a></h2>
-						<h4>Engineering Intern</h4>
-						<h5>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive
-							tests for all features. Part of a 25-person engineering team, using Ruby on Rails and surrounding
-							technologies.</h5>
-					</div>
-					<div class="row col-md-6">
-						<ul>
-							<li>Built an internal marketing bot that helps General Managers in
-								 16+ cities manage courier job listings, ensuring we always had
-								 couriers to decrease the time it takes to launch markets in new regions</li>
-							<li>Created the backend for disabling merchants allowing relevant teams to
-								always be notified whenever restaurants run out of ingredients, experience app
-								issues, or reach their maximum order volume</li>
-							<li>Built many feature requests in the admin codebase</li>
-					</ul>
-					</div>
-					<br>
-				</div>
 
-				<br><br>
+				<!-- Skills -->
+				<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Skills</h2>
+							<div class="items style3 medium onscroll-fade-in">
+								<section>
+									<span class="icon style2 major fa-diamond"></span>
+									<h3>Ruby</h3>
+									<p>Built Caviar with Ruby on Rails. FactoryGirl, RSpec.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-save"></span>
+									<h3>Machine Learning</h3>
+									<p>Courses in Aritifical Intelligence, ML. Tensorflow, SciPy, Numpy, Pandas.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-bar-chart"></span>
+									<h3>C/C++</h3>
+									<p>STL, UnitTest++, Data Structures, IA-32 Assembly Language, p-thread parallel programming</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-wifi"></span>
+									<h3>Python</h3>
+									<p>Python2, Python3, Unit Tests.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-cog"></span>
+									<h3>Computer Vision</h3>
+									<p>OpenCV, Python, Linear Algebra, Graphics, Photoshop.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-cog"></span>
+									<h3>DevOps</h3>
+									<p>Heroku, AWS, MySQL</p>
+								</section>
+							</div>
+						</div>
+					</section>
 
-				<div class="container">
-					<div class="row col-md-5"></div>
-					<div class="row col-md-2">
-						 <a id="resume" href="SAM_SHIH_RESUME.pdf"
- 						 target="_blank"><i class="fa fa-file-pdf-o"></i> Resume</a>
+				<!-- Contact -->
+				<section class="wrapper style1 align-center color1 invert">
+						<div class="inner medium">
+							<h2>Get in touch</h2>
+							<form method="post" action="#">
+								<div class="field half first">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" value="" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="email" name="email" id="email" value="" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="6"></textarea>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						</div>
+					</section>
 
-					</div>
-					<div class="row col-md-5"></div>
-				</div>
-				<br><br>
+				<!-- Footer Social Media Icons -->
+				<footer class="wrapper style1 align-center invert color1">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://www.github.com/samuelshih" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.instagram.com/samyoshih" target="_blank" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+		  					<li><a href="http://samshih.me" target="_blank" class="icon style2 fa-wordpress"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/shihsamuel/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:sam_shih@icloud.com" target="_blank" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</div>
+					</footer>
 			</div>
 
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-			<!-- Contact -->
-			<!-- <div class="contact" id="contact">
-				<form id="contactForm" name="contactForm">
-					<input type="text" placeholder="Name" value="" size="35" id="contactName" name="contactName">
-					<input type="text" placeholder="Email" value="" size="35" id="contactEmail" name="contactEmail">
-					<textarea col="5" rows="5" placeholder="Message" id="contactMessage" name="contactMessage"></textarea>
-				</form>
-			</div> -->
-
-		</div>
 	</body>
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/parallax.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/main.js"></script>
 </html>
